-*- text -*-

To announce to OMPI core testers:

- New funclets:
    - &perl(): MANY more things are possible now!
    - &regexp()
    - &check_ipoib_connectivity()
    - ?&check_ib_connectivty()?
    - &verbose(), &debug(), &print()
    - &env_hosts() can be uniq-ified
    - &SSH::refresh_ssh_known_hosts_file() - updates a stale
      ~/.ssh/known_hosts file. CAUTION: use of this funclet
      is only advisable in unstable (yet secure)
      environments (e.g., lab networks).
    - &scratch_root() returns the directory name of the scratch tree
    - &strstr(), like strstr(3)
    - &preq_replace(), like
      http://www.php.net/manual/en/function.preg-replace.php
    - &MPI::OMPI::find_mpirun_params() and &MPI::OMPI::find_network()
    - &get_version() for the below MPIs:
      - &MPI::OMPI::get_version()
      - &MPI::HPMPI::get_version()
      - &MPI::CrayMPI::get_version()
      - &MPI::IntelMPI::get_version()
      - &MPI::ScaliMPI::get_version()
    - &test_command_line()
    - &split() now takes optional 2nd param to specify token
    - &find(regexp, directory list)
    - &rm_name() -- close to, but slightly different than &env_name()
    - &prime(min,max) - return prime numbers between min and max
    - &env_max_hosts()
    - &get_<compiler>_version() funclets now take optional parameter
      specifying the argv[0] to use.
    - &current_phase() - returns name of currently executing phase (e.g., "MPI
      install")
    - &current_section() - returns the name of currently executing INI section
      (e.g., "Test build: intel")
    - &pwd() - like the shell command of the same name
    - &cwd() - alias for &pwd()
    - &which() - like the shell command of the same name
    - &get_mpi_get_names() - return a csv list of all cached MPI get names
                             matching a pattern
    - &SVN::get_r_number() - return the revision number of an SVN workspace
    - &search_and_replace() - perform a search and replace